# django-practical-guide-course-code

code/: mise.toml  pyproject.toml  req.txt  requirements.txt
code/03-UrlsAndViews/01-adding-a-first-url-and-view/challenges/: views.py
code/03-UrlsAndViews/02-dynamic-path-segments/challenges/: views.py
code/03-UrlsAndViews/03-exploring-path-converters/challenges/: views.py
code/03-UrlsAndViews/03-exploring-path-converters/monthly_challenges/: settings.py
code/03-UrlsAndViews/04-redirecting/challenges/: views.py
code/03-UrlsAndViews/05-the-reverse-function/challenges/: views.py
code/03-UrlsAndViews/06-returning-html-response/challenges/: views.py
code/03-UrlsAndViews/07-practicing-urls-and-views/: manage.py
code/04-TemplatesAndStaticFiles/01-adding-and-registering-templates/challenges/: views.py
code/04-TemplatesAndStaticFiles/01-adding-and-registering-templates/monthly_challenges/: settings.py
code/04-TemplatesAndStaticFiles/02-rendering-templates/challenges/: views.py
code/04-TemplatesAndStaticFiles/03-template-variables-interpolation/challenges/: views.py
code/04-TemplatesAndStaticFiles/04-exercise-solution/challenges/: views.py
code/04-TemplatesAndStaticFiles/05-filters/challenges/: views.py
code/04-TemplatesAndStaticFiles/06-the-for-tag/challenges/: views.py
code/06-DataAndModels/04-rendering-queried-data/: manage.py
code/11-ClassViews/07-the-createview/: manage.py
code/14-ProjectBlogForms-Files-Sessions/06-handling-comment-form-submission/: manage.py
code/ZZ-DjangoSummary/10-relationship-one-to-many/: manage.py
(+156 files in other folders)
