[project]
name = "code"
version = "0.1.0"
description = "This repository holds the source code snapshots for our Django - The Practical Guide course"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref>=3.11.1",
    "boto3>=1.42.91",
    "botocore>=1.42.91",
    "django>=6.0.4",
    "django-storages>=1.14.6",
    "jmespath>=1.1.0",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.11",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2026.1.post1",
    "ruff>=0.15.11",
    "s3transfer>=0.16.0",
    "six>=1.17.0",
    "sqlparse>=0.5.5",
    "urllib3>=2.6.3",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I"] # pycodestyle, pyflakes, isort
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
